--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.0"
   },
@@ -39,6 +40,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "@types/node": "^20.12.4",
+    "gh-pages": "^6.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.3"
   }
 }
